--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "bootstrap": "^5.3.6",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.9.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
